creusot/tests/should_fail/bug/603.stderr
error[E0277]: the trait bound `VecMap<K, V>: creusot_contracts::Default` is not satisfied
  --> 603.rs:11:5
   |
11 |     fn default() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^ the trait `creusot_contracts::Default` is not implemented for `VecMap<K, V>`
   |
   = help: the following other types implement trait `creusot_contracts::Default`:
             &[T]
             &mut [T]
             ()
             bool
             i128
             i16
             i32
             i64
           and 9 others

error[creusot]: error above

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
